<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_subtitle">Track your expenses smartly</string>
    <string name="register_title">Create Account</string>
    <string name="register_subtitle">Join ExpenseIQ today</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="login_no_account">Don\'t have an account? Register</string>
    <string name="register_have_account">Already have an account? Login</string>
    <string name="error_empty_email">Email is required</string>
    <string name="error_empty_password">Password is required</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_password_too_short">Password must be at least 6 characters</string>
    <string name="login_logo_emoji">💰</string>
</resources>